# ChainCommand_Autonomous_Supply_Chain_Optimizer_Agent_Team

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
chaincommand/: __init__.py  config.py  langgraph_orchestrator.py  observability.py  orchestrator.py  resilience.py  state.py
chaincommand/agents/: __init__.py  base_agent.py  coordinator.py  inventory_optimizer.py
chaincommand/api/: app.py
chaincommand/aws/: __init__.py  athena_client.py  aws_backend.py  backend.py  redshift_client.py
chaincommand/bom/: __init__.py  manager.py  models.py
chaincommand/causal/: __init__.py  data_generator.py  supplier_switch.py
chaincommand/ctb/: analyzer.py
chaincommand/data/: generator.py  schemas.py
chaincommand/events/: monitor.py
chaincommand/kpi/: engine.py
chaincommand/models/: anomaly_detector.py  chronos_forecaster.py  forecaster.py  optimizer.py
chaincommand/optimization/: __init__.py  benchmark.py  cpsat_optimizer.py
chaincommand/risk/: __init__.py  scorer.py
chaincommand/rl/: __init__.py  environment.py  policy.py  trainer.py
chaincommand/tools/: __init__.py  action_tools.py  allocation_tools.py  risk_tools.py
helm/chaincommand/: values.yaml
k8s/: secret.yaml
monitoring/: docker-compose.monitoring.yaml
pipelines/: docker-compose.airflow.yaml
tests/: conftest.py  test_property_based.py
tests/test_agents/: test_base_agent.py  test_coordinator.py  test_demand_forecaster.py  test_supplier_manager.py
tests/test_api/: test_control.py  test_dashboard.py  test_security.py
(+21 files in other folders)
